# amanita

./: .gitignore  .gitmodules  AMANITAConfig.h.in  CMakeLists.txt  README.md
src/: main.cpp
